tests/NormalTests/paczka2/big_fuzzy/85916736.err
Error in line 2: tYYgj A950 5,4
Error in line 1: Or856Asvqqj S139 48,9
Error in line 7: Or856Asvqqj S939 97,6
Error in line 9: Or856Asvqqj A900 76,7
Error in line 11: Or856Asvqqj S939 95,2
Error in line 22: rgQX S939 2,7
Error in line 23: rgQX S139 88,7
Error in line 29: qC8grLHQ5L A900 72,5
Error in line 28: S139 S939 35,5
Error in line 34: rgQX A900 58,6
Error in line 40: tYYgj S939 64,5
Error in line 38: S139 A950 93,9
Error in line 45: CMYuvUAlF7W A950 44,2
Error in line 71: ?Û900
Error in line 72: rgQX A950 0,8
Error in line 77: CMYuvUAlF7W A900 70,9
Error in line 67: S139 A900 10,3
Error in line 76: rgQX S139 91,2
Error in line 86: rgQX S939 32,1
Error in line 81: CMYuvUAlF7W S939 14,3
Error in line 92: rgQX A950 61,5
Error in line 99: rgQX S939 70,9
Error in line 93: fFc S139 99,8
Error in line 105: fFc S939 57,8
Error in line 109: qC8grLHQ5L S139 68,9
Error in line 111: qC8grLHQ5L A950 17,7
Error in line 110: Or856Asvqqj S939 28,6
Error in line 116: fFc A950 48,8
Error in line 113: Or856Asvqqj A950 23,3
Error in line 124: qC8grLHQ5L A950 88,6
Error in line 129: rgQX A900 28,2
Error in line 137: tYYgj A900 90,4
Error in line 150: S139 S939 19,7
Error in line 159: tYYgj S139 32,3
Error in line 162: tYYgj A950 41,3
Error in line 163: S139 A950 78,6
Error in line 165: Or856Asvqqj S139 11,1
Error in line 169: Or856Asvqqj A900 31,8
Error in line 146: fFc A900 39,6
Error in line 171: Or856Asvqqj S939 73,1
Error in line 179: Or856Asvqqj A900 51,8
Error in line 185: S139 S939 44,5
Error in line 161: CMYuvUAlF7W A950 11,2
Error in line 186: qC8grLHQ5L A950 46,6
Error in line 197: fFc S139 21,0
Error in line 199: qC8grLHQ5L S139 25,1
Error in line 201: fFc A900 0,8
Error in line 207: fFc S139 89,0
Error in line 218: fFc A900 97,7
Error in line 225: fFc S139 66,8
Error in line 233: CMYuvUAlF7W A950 17,3
Error in line 234: CMYuvUAlF7W A900 5,7
Error in line 239: rgQX A950 43,9
Error in line 235: Or856Asvqqj S139 193,3
Error in line 247: CMYuvUAlF7W A950 31,38
